@@ -174,7 +174,7 @@ char *slurm_sched_strerror( int errnum )
 /**************************************************************************/
 void slurm_sched_plugin_requeue( struct job_record *job_ptr, char *reason )
 {
-        wiki_job_requeue(job_ptr, reason);
+ 	wiki_job_requeue(job_ptr, reason);
 }
 
 /**************************************************************************/
